--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,14 @@
 			<artifactId>liquibase-maven-plugin</artifactId>
 			<version>${liquibase.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.4.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
