--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,12 @@
 			<version>2.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.4.5</version>
+		</dependency>
+
 
 	</dependencies>
 
