--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,13 @@ databaseChangeLog:
       file: db/changelog/changes/01-create-table-books.yaml
   - include:
       file: db/changelog/changes/02-create-table-users.yaml
+  - include:
+      file: db/changelog/changes/03-create-table-roles.yaml
+  - include:
+      file: db/changelog/changes/04-insert-roles.yaml
+  - include:
+      file: db/changelog/changes/05-create-table-user-roles.yaml
+  - include:
+      file: db/changelog/changes/06-insert-admin-user.yaml
+  - include:
+      file: db/changelog/changes/07-create-association-role-for-admin.yaml
