--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,7 @@ databaseChangeLog:
       file: db/changelog/changes/06-insert-admin-user.yaml
   - include:
       file: db/changelog/changes/07-create-association-role-for-admin.yaml
+  - include:
+      file: db/changelog/changes/08-create-table-categories.yaml
+  - include:
+      file: db/changelog/changes/09-create-table-books-categories.yaml
